# axum-api-starter

./: .env  Cargo.toml  README.md
requests/: test.http
src/: lib.rs  main.rs
src/handler/user_handler/: create_user_handler.rs
src/model/: user_model.rs
src/repository/user_repository/: create_user_repository.rs  find_user_by_email_repository.rs  mod.rs
src/service/user_service/: create_user_service.rs
src/util/: app_error.rs  encryptor.rs  http_status_code.rs  mod.rs  uuid_generator.rs
src/util/error/: app_error.rs
tests/: service_test.rs
tests/service/user/: create_user_service_test.rs  mod.rs
