[package]
name = "axum_api_starter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = {version = "1", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
bcrypt = "0.17.1"
dotenv = "0.15"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.17"
async-trait = "0.1"

[dev-dependencies]
mockall = "0.14"
